--- a/bolsa-laboral/src/main/resources/application.properties
+++ b/bolsa-laboral/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.profiles.active=test
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/bolsalaboraltest
+spring.datasource.url=jdbc:mysql://169.254.17.50:3306/bolsalaboraltest
 #spring.datasource.url=jdbc:mysql://172.22.96.1:3306/bolsalaboraltest
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=fray
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql:true
