--- a/bolsa-laboral/pom.xml
+++ b/bolsa-laboral/pom.xml
@@ -208,7 +208,7 @@
             <configuration>
                 <forkCount>1</forkCount>
                 <reuseForks>false</reuseForks>
-                <timeout>300</timeout> <!-- Aumentar el tiempo de espera en segundos -->
+                <timeout>300c1</timeout> <!-- Aumentar el tiempo de espera en segundos -->
                 <timeoutSuite>300</timeoutSuite> <!-- Aumentar el tiempo de espera para el conjunto de pruebas en segundos -->
             </configuration>
         </plugin>       
