--- a/bolsa-laboral/src/main/resources/application.properties
+++ b/bolsa-laboral/src/main/resources/application.properties
@@ -1,23 +1,35 @@
+# Nombre de la aplicación y perfil activo
 spring.application.name=bolsa-laboral
 spring.profiles.active=test
 
+# Configuración de JPA y Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect # Actualización del dialecto obsoleto
 spring.datasource.url=jdbc:mysql://169.254.17.50:3306/bolsalaboraltest
-#spring.datasource.url=jdbc:mysql://172.22.96.1:3306/bolsalaboraltest
+# spring.datasource.url=jdbc:mysql://172.22.96.1:3306/bolsalaboraltest
 spring.datasource.username=fray
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.show-sql:true
+# Mostrar las consultas SQL en los logs
+spring.jpa.show-sql=true
 
-server.port=8081
+# Desactivar el "open-in-view" si no es necesario para evitar consultas durante la renderización de vistas
+spring.jpa.open-in-view=false
+
+# Puerto del servidor
+server.port=8080
+
+# Configuración de Swagger
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-#springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/doc/swagger-ui.html
-#springdoc.swagger-ui.path=/swagger-ui-custom.html
 
+# Configuración de JWT
+jwt.secret=secretsecretsecretsecretsecretsecretsecretsecret
+jwt.expiration=36000
 
-jwt.secret = secretsecretsecretsecretsecretsecretsecretsecret
-jwt.expiration = 36000
+# Configuración adicional de logging para depurar
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
